# rp2040-zero_template

./: Cargo.toml  README.md  runner.sh
.cargo/: config.toml
